Added API authentication

--- a/Explore OpenFDA API.ipynb
+++ b/Explore OpenFDA API.ipynb
@@ -14,12 +14,13 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import json"
+    "import json\n",
+    "from config import api_key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +29,7 @@
        "'https://api.fda.gov/drug/event.json?search=receivedate:[20040101+TO+20081231]&limit=10'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,6 +37,10 @@
    "source": [
     "base_link=\"https://api.fda.gov/drug/event.json\"\n",
     "search_term=\"?search=receivedate:[20040101+TO+20081231]&limit=10\" \n",
+    "#search_term='?&count=patient.reaction.reactionmeddrapt.exact'\n",
+    "\n",
+    "#api=\"?api_key=\"+api_key+\"&\"\n",
+    "headers={\"api_key\": api_key}\n",
     "\n",
     "link=base_link+search_term\n",
     "link\n"
@@ -43,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -7583,19 +7588,19 @@
        "  'receiptdate': '20050221'}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response=requests.get(link).json()\n",
+    "response=requests.get(link, headers=headers).json()\n",
     "response['results']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -7604,7 +7609,7 @@
        "10"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7650,7 +7655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -7674,328 +7679,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>receiptdateformat</th>\n",
-       "      <th>receiver</th>\n",
-       "      <th>companynumb</th>\n",
-       "      <th>receivedateformat</th>\n",
-       "      <th>primarysource</th>\n",
-       "      <th>seriousnessother</th>\n",
-       "      <th>transmissiondateformat</th>\n",
-       "      <th>fulfillexpeditecriteria</th>\n",
-       "      <th>safetyreportid</th>\n",
-       "      <th>sender</th>\n",
-       "      <th>receivedate</th>\n",
-       "      <th>patient</th>\n",
-       "      <th>seriousnesshospitalization</th>\n",
-       "      <th>transmissiondate</th>\n",
-       "      <th>serious</th>\n",
-       "      <th>receiptdate</th>\n",
-       "      <th>seriousnessdeath</th>\n",
-       "      <th>seriousnesslifethreatening</th>\n",
+       "      <th>term</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>HQWYE821915MAR04</td>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4322505-4</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20040319</td>\n",
-       "      <td>{'patientonsetage': '56', 'reaction': [{'react...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20041129</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20040315</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>DRUG INEFFECTIVE</td>\n",
+       "      <td>733191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>JACAN16471</td>\n",
-       "      <td>102</td>\n",
-       "      <td>{'qualification': '3', 'reportercountry': 'CAN...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5801206-7</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20080707</td>\n",
-       "      <td>{'patientonsetage': '26', 'patientdeath': {'pa...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20090109</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20080625</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NAUSEA</td>\n",
+       "      <td>485098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>WAES 97101426</td>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4318221-5</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20040315</td>\n",
-       "      <td>{'patientonsetage': '8', 'reaction': [{'reacti...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20041129</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20040228</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>DEATH</td>\n",
+       "      <td>474541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>CDN/97/00530/LEX</td>\n",
-       "      <td>102</td>\n",
-       "      <td>{'reportercountry': 'CANADA'}</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5015436-8</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20060601</td>\n",
-       "      <td>{'patientonsetage': '22', 'reaction': [{'react...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20061013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19970918</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>FATIGUE</td>\n",
+       "      <td>439328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>USA/97/02459/LAS</td>\n",
-       "      <td>102</td>\n",
-       "      <td>{'qualification': '1'}</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4412763-X</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20040802</td>\n",
-       "      <td>{'patientonsetage': '78', 'reaction': [{'react...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20050211</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19970904</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>HEADACHE</td>\n",
+       "      <td>388310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1997002193-FJ</td>\n",
-       "      <td>102</td>\n",
-       "      <td>{'qualification': '1'}</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4338356-0</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20040407</td>\n",
-       "      <td>{'patientonsetage': '30', 'reaction': [{'react...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20050107</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20040323</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>971223-008013562</td>\n",
-       "      <td>102</td>\n",
-       "      <td>{'reportercountry': 'BELGIUM', 'qualification'...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5210389-1</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20070117</td>\n",
-       "      <td>{'patientonsetage': '4', 'reaction': [{'reacti...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20070707</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20070110</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>95</th>\n",
+       "      <td>DRY SKIN</td>\n",
+       "      <td>64845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>971211-008013452</td>\n",
-       "      <td>102</td>\n",
-       "      <td>{'reportercountry': 'BELGIUM', 'qualification'...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5215788-X</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20070123</td>\n",
-       "      <td>{'reaction': [{'reactionmeddrapt': 'ARRHYTHMIA...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20070707</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20070110</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>96</th>\n",
+       "      <td>INFLUENZA</td>\n",
+       "      <td>63945</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>US97040775A</td>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4474049-7</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20041008</td>\n",
-       "      <td>{'patientonsetage': '60', 'reaction': [{'react...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20050328</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20040920</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>97</th>\n",
+       "      <td>HAEMORRHAGE</td>\n",
+       "      <td>63926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>102</td>\n",
-       "      <td>None</td>\n",
-       "      <td>JAFRA37402</td>\n",
-       "      <td>102</td>\n",
-       "      <td>{'qualification': '1'}</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4598678-5</td>\n",
-       "      <td>{'senderorganization': 'FDA-Public Use'}</td>\n",
-       "      <td>20050304</td>\n",
-       "      <td>{'patientonsetage': '29', 'reaction': [{'react...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20050727</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20050221</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>98</th>\n",
+       "      <td>ABDOMINAL DISTENSION</td>\n",
+       "      <td>62971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>PRODUCT DOSE OMISSION</td>\n",
+       "      <td>62189</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  receiptdateformat receiver       companynumb receivedateformat  \\\n",
-       "0               102     None  HQWYE821915MAR04               102   \n",
-       "1               102     None        JACAN16471               102   \n",
-       "2               102     None     WAES 97101426               102   \n",
-       "3               102     None  CDN/97/00530/LEX               102   \n",
-       "4               102     None  USA/97/02459/LAS               102   \n",
-       "5               102     None     1997002193-FJ               102   \n",
-       "6               102     None  971223-008013562               102   \n",
-       "7               102     None  971211-008013452               102   \n",
-       "8               102     None       US97040775A               102   \n",
-       "9               102     None        JAFRA37402               102   \n",
+       "                     term   count\n",
+       "0        DRUG INEFFECTIVE  733191\n",
+       "1                  NAUSEA  485098\n",
+       "2                   DEATH  474541\n",
+       "3                 FATIGUE  439328\n",
+       "4                HEADACHE  388310\n",
+       "..                    ...     ...\n",
+       "95               DRY SKIN   64845\n",
+       "96              INFLUENZA   63945\n",
+       "97            HAEMORRHAGE   63926\n",
+       "98   ABDOMINAL DISTENSION   62971\n",
+       "99  PRODUCT DOSE OMISSION   62189\n",
        "\n",
-       "                                       primarysource seriousnessother  \\\n",
-       "0                                               None                1   \n",
-       "1  {'qualification': '3', 'reportercountry': 'CAN...              NaN   \n",
-       "2                                               None              NaN   \n",
-       "3                      {'reportercountry': 'CANADA'}              NaN   \n",
-       "4                             {'qualification': '1'}                1   \n",
-       "5                             {'qualification': '1'}              NaN   \n",
-       "6  {'reportercountry': 'BELGIUM', 'qualification'...                1   \n",
-       "7  {'reportercountry': 'BELGIUM', 'qualification'...              NaN   \n",
-       "8                                               None                1   \n",
-       "9                             {'qualification': '1'}              NaN   \n",
-       "\n",
-       "  transmissiondateformat fulfillexpeditecriteria safetyreportid  \\\n",
-       "0                    102                       1      4322505-4   \n",
-       "1                    102                       1      5801206-7   \n",
-       "2                    102                       1      4318221-5   \n",
-       "3                    102                       1      5015436-8   \n",
-       "4                    102                       1      4412763-X   \n",
-       "5                    102                       1      4338356-0   \n",
-       "6                    102                       2      5210389-1   \n",
-       "7                    102                       2      5215788-X   \n",
-       "8                    102                       1      4474049-7   \n",
-       "9                    102                       1      4598678-5   \n",
-       "\n",
-       "                                     sender receivedate  \\\n",
-       "0  {'senderorganization': 'FDA-Public Use'}    20040319   \n",
-       "1  {'senderorganization': 'FDA-Public Use'}    20080707   \n",
-       "2  {'senderorganization': 'FDA-Public Use'}    20040315   \n",
-       "3  {'senderorganization': 'FDA-Public Use'}    20060601   \n",
-       "4  {'senderorganization': 'FDA-Public Use'}    20040802   \n",
-       "5  {'senderorganization': 'FDA-Public Use'}    20040407   \n",
-       "6  {'senderorganization': 'FDA-Public Use'}    20070117   \n",
-       "7  {'senderorganization': 'FDA-Public Use'}    20070123   \n",
-       "8  {'senderorganization': 'FDA-Public Use'}    20041008   \n",
-       "9  {'senderorganization': 'FDA-Public Use'}    20050304   \n",
-       "\n",
-       "                                             patient  \\\n",
-       "0  {'patientonsetage': '56', 'reaction': [{'react...   \n",
-       "1  {'patientonsetage': '26', 'patientdeath': {'pa...   \n",
-       "2  {'patientonsetage': '8', 'reaction': [{'reacti...   \n",
-       "3  {'patientonsetage': '22', 'reaction': [{'react...   \n",
-       "4  {'patientonsetage': '78', 'reaction': [{'react...   \n",
-       "5  {'patientonsetage': '30', 'reaction': [{'react...   \n",
-       "6  {'patientonsetage': '4', 'reaction': [{'reacti...   \n",
-       "7  {'reaction': [{'reactionmeddrapt': 'ARRHYTHMIA...   \n",
-       "8  {'patientonsetage': '60', 'reaction': [{'react...   \n",
-       "9  {'patientonsetage': '29', 'reaction': [{'react...   \n",
-       "\n",
-       "  seriousnesshospitalization transmissiondate serious receiptdate  \\\n",
-       "0                          1         20041129       1    20040315   \n",
-       "1                        NaN         20090109       1    20080625   \n",
-       "2                          1         20041129       1    20040228   \n",
-       "3                          1         20061013       1    19970918   \n",
-       "4                          1         20050211       1    19970904   \n",
-       "5                          1         20050107       1    20040323   \n",
-       "6                        NaN         20070707       1    20070110   \n",
-       "7                          1         20070707       1    20070110   \n",
-       "8                        NaN         20050328       1    20040920   \n",
-       "9                          1         20050727       1    20050221   \n",
-       "\n",
-       "  seriousnessdeath seriousnesslifethreatening  \n",
-       "0              NaN                        NaN  \n",
-       "1                1                        NaN  \n",
-       "2                1                          1  \n",
-       "3              NaN                          1  \n",
-       "4              NaN                        NaN  \n",
-       "5              NaN                        NaN  \n",
-       "6              NaN                        NaN  \n",
-       "7              NaN                        NaN  \n",
-       "8              NaN                        NaN  \n",
-       "9              NaN                        NaN  "
+       "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
