--- a/Proportional Analysis using R.ipynb
+++ b/Proportional Analysis using R.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Proportionality Assessment using R and the openEBGM package\n",
     "\n",
-    "To analyse the reported proportionality ratio, we will structure the data as needed by the openEBGM and determine the PRR. Additionally, we will use the Gamma-Poission Shrinkage model and use Empricial Bayes Geometric Mean (EBGM) to report the ratio. \n",
+    "To analyse the reported proportionality ratio, we will structure the data as needed by the openEBGM  [[2]](#2) and determine the PRR. Additionally, we will use the Gamma-Poission Shrinkage model and use Empricial Bayes Geometric Mean (EBGM) to report the ratio. \n",
     "\n",
     "We will follow the example as presented here to achieve this :(https://cran.r-project.org/web/packages/openEBGM/vignettes/x1_introAndDataPrepVignette.html)"
    ]
@@ -623,13 +623,17 @@
    "source": [
     "## Empirical Bayes Approach\n",
     "\n",
+    "In order to handle the issues of small counts, we will explore using the Gamma-Poisson Shrinker(GPS) model[[1]](#1). The emprical Bayes model shrinks the large RR  from small counts to a value much closer to \"null hypothesis\" value of 1. This shrinkage is larger for smaller counts and negligible for larger counts. \n",
+    "\n",
+    "The GPS model uses a Poisson ($\\mu_{ij}$) likelihood for actual cell count $N_{ij}$ and the expected counts $E_{ij}$ are treated as constants. We are interested in the ratio $\\lambda_{ij}=\\frac{\\mu_{ij}}{E_{ij}}$. The prior on $\\lambda$ is a mixture of two gamma distributions and thus the posterior is also a mixture of two gamma distributions. The Emprical Bayes Geometric Mean(EBGM) of the posterior distribution is normally used in place of RR. Additionally, we can use the quantiles as well. We will explore them below. In the Empirical Bayes approach, the prior is driven by the data and this implies that the known posterior distribution relies on a set of hyper-parameters derived from the prior distribution. \n",
+    "\n",
     "### Estimating Hyperparameters\n",
     "\n",
-    "The actual counts (N) and expected counts (E) are used to estimate the hyperparameters of the prior distribution. A large contingency table will have many cells, resulting in computational difficulties for the optimization routines needed for estimation. Data squashing (DuMouchel et al., 2001) transforms a set of 2-dimensional points to a smaller number of 3-dimensional points.\n",
+    "The actual counts (N) and expected counts (E) are used to estimate the hyperparameters of the prior distribution. A large contingency table will have many cells, resulting in computational difficulties for the optimization routines needed for estimation. Data squashing [[1]](#1). transforms a set of 2-dimensional points to a smaller number of 3-dimensional points.For a given N, \"squashing\" combines points with similar Es into bins using a specified bin size and uses the average E within each bin as the E for that bin’s “superpoint”. The new superpoints are weighted by bin size. \n",
     "\n",
     "The hyperparameters are estimated by minimizing the negative log-likelihood function. \n",
     "\n",
-    " The hyperparameters are denoted by the vector θ=(α1,β1,α2,β2,P)"
+    " The hyperparameters are denoted by the vector θ=(α1,β1,α2,β2,P). P is the mixture fraction. Hyperparameters can be calculated by exploring the parameter space of the likelihood function using either the full data set of Ns and Es or the squashed set. "
    ]
   },
   {
@@ -715,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 85,
    "metadata": {
     "scrolled": true
    },
@@ -821,7 +825,7 @@
     }
    ],
    "source": [
-    "theta_init <- c(alpha1 = 0.2, beta1 = 0.1, alpha2 = 2, beta2 = 4, p = 1/3)\n",
+    "theta_init <- c(alpha1 = 0.2, beta1 = 0.1, alpha2 = 2, beta2 = 4, p = 1/3)# These values are taken from the example in the R package documentation\n",
     "stats::nlm(negLLsquash, p = theta_init,\n",
     "           ni = squashed$N, ei = squashed$E, wi = squashed$weight, N_star = 1)"
    ]
@@ -1195,13 +1199,14 @@
     }
    ],
    "source": [
-    "qn <- Qn(theta_hat, N = processed$N, E = processed$E)\n",
+    "#Qn() correspond to the probability that λ came from the first component of the posterior mixture\n",
+    "qn <- Qn(theta_hat, N = processed$N, E = processed$E)#calculates the mixture fractions for the posterior distributions.\n",
     "head(qn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1229,7 @@
     }
    ],
    "source": [
-    "identical(length(qn), nrow(processed))"
+    "identical(length(qn), nrow(processed))# Qn output should match the number of rows in the original data"
    ]
   },
   {
@@ -1294,6 +1299,7 @@
     }
    ],
    "source": [
+    "#EBGM  is a measure of central tendency of the posterior distributions, λij|N=n\n",
     "processed$ebgm <- ebgm(theta_hat, N = processed$N, E = processed$E, qn  = qn)\n",
     "head(processed)"
    ]
@@ -1445,6 +1451,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above, less than 1% of product-event pairs are suspect. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
@@ -1520,6 +1533,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above table, most suspicious (top 5) data all belongs \"carmustine\". Events such as venoocclusive liver disease, basal cell carcinoma etc are recorded much more than expected. These may need further investigation with subject matter experts and will depend on domain-knowledge."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
@@ -1550,7 +1570,27 @@
     "- We have stratified data based on gender and age. We can further augment the analysis to determine, if the adverse events are affecting a specific age/gender category.\n",
     "\n",
     "- Further hyper parameter optimisation\n",
-    "\n"
+    "\n",
+    "- Some events have similar texts but are treated as separate events. We can use MEDDRA dictionoary (e.g HLT/HLGT) etc to standardise. We can use some form of text distances to align them. (https://www.meddra.org/how-to-use/basics/hierarchy)\n",
+    "\n",
+    "- The GPS model does not take into account product interaction. Multi-item Gamma Poisson Shrinker model  [[3]](#3) is currently used by FDA for this. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "<a id=\"1\">[1]</a> \n",
+    "DuMouchel W, Pregibon D (2001). “Empirical Bayes Screening for Multi-item Associations.” In Proceedings of the Seventh ACM SIGKDD International Conference on Knowledge Discovery and Data Mining, KDD ’01, pp. 67-76. ACM, New York, NY, USA. ISBN 1-58113-391-X. https://doi.org/10.1145/502512.502526\n",
+    "\n",
+    "\n",
+    "<a id=\"2\">[2]</a> \n",
+    "Canida T, Ihrie J (2017). “openEBGM: An R Implementation of the Gamma-Poisson Shrinker Data Mining Model.” The R Journal, 9(2), 499-519. https://journal.r-project.org/archive/2017/RJ-2017-063/index.html\n",
+    "\n",
+    "<a id=\"3\">[3]</a> \n",
+    "Bate A, Evans, S. Quantitative signal detection using spontaneous ADR reporting. Pharmacoepidemiol and Drug Saf 2009 Jun;18(6):427-36. doi: 10.1002/pds.1742."
    ]
   },
   {
